--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="random.js"></script> -->
     <!-- <script src="multiplos.js"></script> -->
-     <script src="repitecaracter.js"></script>
+    <!-- <script src="repitecaracter.js"></script> -->
+    <script src="invertir.js"></script>
 </body>
 </html>
