--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="random.js"></script> -->
-    <!-- <script src="multiplos.js"></script> -->
-    <!-- <script src="repitecaracter.js"></script> -->
-    <script src="invertir.js"></script>
+    <!-- <script src="random.js"></script> --> 
+    <!-- <script src="multiplos.js"></script> --> 
+    <!-- <script src="repitecaracter.js"></script> --> 
+    <!-- <script src="invertir.js"></script> -->
+    <script src="nuevosJuegadores.js"></script>
 </body>
 </html>
