--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="multiplos.js"></script> --> 
     <!-- <script src="repitecaracter.js"></script> --> 
     <!-- <script src="invertir.js"></script> -->
-    <script src="nuevosJuegadores.js"></script>
+    <!-- <script src="nuevosJuegadores.js"></script> -->
+    <script src="bonus.js"></script>
 </body>
 </html>
